# media-tooling

./: .gitignore  AGENTS.md  README.md  WORKFLOW.md  pyproject.toml
.agents/skills/convert-tasks-to-linear/: SKILL.md
.agents/skills/convert-tasks-to-linear/scripts/: convert_tasks_to_linear.py
.agents/skills/create-implementation-plan/: SKILL.md
.agents/skills/land/: SKILL.md
.agents/skills/linear/: SKILL.md
.agents/skills/linear/queries/: project_milestone_create.graphql  project_milestone_update.graphql  project_planning_state.graphql
.agents/skills/manim-video/: SKILL.md
.agents/skills/manim-video/references/: animations.md  equations.md  mobjects.md  production-quality.md  rendering.md
.agents/skills/media-corpus-ingest/: SKILL.md
.agents/skills/media-launch-kit-ingest/: SKILL.md
.agents/skills/media-render-pipeline/: SKILL.md
.agents/skills/media-rough-cut-assembly/: SKILL.md
.agents/skills/media-subtitle-pipeline/: SKILL.md
.agents/skills/opensymphony-memory/: SKILL.md
.github/workflows/: ai-pr-review.yml
.opensymphony/memory/: memory.yaml
docs/: AGENT-HARNESS-USAGE-EXAMPLES.md  CODEX-USAGE-EXAMPLES.md  DEVELOPMENT.md  EXPORTING.md  GUIA-ES.md  GUIDE-EN.md  HYPERFRAMES.md  SETUP.md  WORKFLOWS.md  hard-rules.md  m1-transcript-visual-intelligence.md  m2-render-quality-production.md  m3-smart-editing-self-correction.md  m4-optional-enhancements.md  video-use-integration-plan.md
docs/tasks/: 001-add-packed-transcript-format.md  002-add-timeline-view-composite.md  003-update-subtitle-pipeline-skill.md  004-add-subtitle-burning.md  005-add-batch-burn-subtitles.md  006-add-color-grading.md  007-add-audio-fades-to-rough-cut.md  008-add-loudness-normalization.md  009-add-edl-renderer.md  010-add-self-evaluation.md  011-add-session-memory.md  012-codify-hard-rules-and-anti-patterns.md  013-update-rough-cut-assembly-skill.md  014-add-render-pipeline-skill.md  015-add-elevenlabs-scribe-backend.md  016-add-batch-subtitle-elevenlabs.md  017-add-overlay-compositing.md  018-add-manim-video-skill.md  019-add-project-init-updates.md  milestones.md
scripts/: bootstrap-macos.sh  check.sh  install-hyperframes.sh  install-shell-helpers.sh
shell/: media-tooling.zsh
src/media_tooling/: __init__.py  batch_burn_subtitles.py  batch_contact_sheet.py  batch_subtitle.py  batch_utils.py  burn_subtitles.py  contact_sheet.py  edl_render.py  ffprobe_utils.py  grade.py  loudnorm.py  pack_transcript.py  project_init.py  rough_cut.py  subtitle.py  subtitle_translate.py  timeline_view.py  verify.py
src/media_tooling/templates/: project_AGENTS.md
tests/: test_batch_burn_subtitles.py  test_batch_subtitle.py  test_batch_utils.py  test_burn_subtitles.py  test_edl_render.py  test_grade.py  test_loudnorm.py  test_pack_transcript.py  test_project_init.py  test_rough_cut.py  test_subtitle.py  test_subtitle_translate.py  test_timeline_view.py  test_verify.py
