[project]
name = "media-tooling"
version = "0.1.0"
description = "Reusable media tooling for transcripts, subtitles, and clip planning"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lightning-whisper-mlx>=0.0.10; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "faster-whisper>=1.1.0; sys_platform != 'darwin' or platform_machine != 'arm64'",
    "mlx<0.29.4; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "onnxruntime<1.24; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "pillow>=11.2.1",
]

[tool.uv]
required-environments = [
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
    "sys_platform == 'darwin' and platform_machine == 'x86_64'",
]

[project.scripts]
media-batch-contact-sheet = "media_tooling.batch_contact_sheet:main"
media-batch-subtitle = "media_tooling.batch_subtitle:main"
media-contact-sheet = "media_tooling.contact_sheet:main"
media-rough-cut = "media_tooling.rough_cut:main"
media-subtitle = "media_tooling.subtitle:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
