[project]
name = "media-tooling"
version = "0.1.1"
description = "Reusable media tooling for transcripts, subtitles, and clip planning"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lightning-whisper-mlx>=0.0.10; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "faster-whisper>=1.1.0; sys_platform != 'darwin' or platform_machine != 'arm64'",
    "mlx<0.29.5; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "onnxruntime<1.24; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "pillow>=11.2.1",
]

[dependency-groups]
dev = [
    "mypy>=1.11",
    "ruff>=0.6",
]

[tool.uv]
required-environments = [
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
    "sys_platform == 'darwin' and platform_machine == 'x86_64'",
]

[project.scripts]
media-batch-contact-sheet = "media_tooling.batch_contact_sheet:main"
media-batch-subtitle = "media_tooling.batch_subtitle:main"
media-burn-subtitles = "media_tooling.burn_subtitles:main"
media-contact-sheet = "media_tooling.contact_sheet:main"
media-grade = "media_tooling.grade:main"
media-rough-cut = "media_tooling.rough_cut:main"
media-subtitle = "media_tooling.subtitle:main"
media-tooling-init = "media_tooling.project_init:main"
media-translate-subtitles = "media_tooling.subtitle_translate:main"

[tool.ruff]
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["media_tooling"]

[tool.mypy]
python_version = "3.12"
files = ["src", "tests"]
mypy_path = "src"
check_untyped_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "faster_whisper",
    "lightning_whisper_mlx",
    "lightning_whisper_mlx.*",
    "PIL",
    "PIL.*",
]
ignore_missing_imports = true

[tool.hatch.build.targets.wheel.force-include]
".agents" = "media_tooling/.agents"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
